--- a/beta/index.html
+++ b/beta/index.html
@@ -208,8 +208,8 @@
             <button onclick="window.print()" id="legacyPrintButton" class="btn btn-primary no-print">Print Page</button>
             <button onclick="tiPrint()" id="printButton" class="btn btn-primary no-print" style="display: none"><i class="fa fa-mouse-pointer"></i> <span class="badge badge-pill">NEW</span> Print Now with TiPrint</button>
             <br>
-            <button id="tidocs-edit" class="no-print" style="float: left; display: none; width: 50px; height: 50px; border-radius: 50%; position: fixed; z-index: 1; bottom: 10px; left: 10px;" onclick="editDoc()" class="btn btn-primary"><span class="glyphicon glyphicon-pencil"></span></button>
-            <button id="tidocs-reader" class="no-print" style="float: right; display: none; width: 50px; height: 50px; border-radius: 50%; position: fixed; z-index: 1; bottom: 10px; right: 10px;" onclick="docReader()" class="btn btn-primary"><span class="glyphicon glyphicon-align-justify"></span></button>
+            <button id="tidocs-edit" class="btn btn-primary" class="no-print" style="float: left; display: none; width: 50px; height: 50px; border-radius: 50%; position: fixed; z-index: 1; bottom: 10px; left: 10px;" onclick="editDoc()" class="btn btn-primary"><span class="glyphicon glyphicon-pencil"></span></button>
+            <button id="tidocs-reader" class="btn btn-primary" class="no-print" style="float: right; display: none; width: 50px; height: 50px; border-radius: 50%; position: fixed; z-index: 1; bottom: 10px; right: 10px;" onclick="docReader()" class="btn btn-primary"><span class="glyphicon glyphicon-align-justify"></span></button>
         </div>
 
         <div id="settings" style="display: none;">
