--- a/beta/index.html
+++ b/beta/index.html
@@ -292,6 +292,7 @@
         </div>
         <div id="tislides" style="display: none;">
             <h3>TiSlides <b>Beta</b></h3>
+            <input id="slidesTitle" class="form-control lg" value="Untitled Slideshow"><br>
             <div id="controls">
                 <button class="btn btn-slides formatting-button" onclick="document.execCommand('bold'); saveSlide();"><b>B</b></button>
                 <button class="btn btn-slides formatting-button" onclick="document.execCommand('italic'); saveSlide();"><i>I</i></button>
