--- a/beta/tishare/index.html
+++ b/beta/tishare/index.html
@@ -4,7 +4,7 @@
   <title>TiShare</title>
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://proudloyaltier.github.io/timedia/beta/other resources/style.css" crossorigin="anonymous">
+  <link rel="stylesheet" href="../other resources/style.css" crossorigin="anonymous">
   <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
