--- a/beta/index.html
+++ b/beta/index.html
@@ -55,7 +55,7 @@
                             <li><a href="?app=2">TiChat <span class="glyphicon glyphicon-send"></span></a></li>
                             <li><a href="?app=6">Settings <span class="glyphicon glyphicon-cog"></span></a></li>
                             <li><a href="?app=7">Tiles <span class="glyphicon glyphicon-cloud"></span></a></li>
-                            <li><a href="https://proudloyaltier.github.io/timedia/beta/tishare/">TiShare <span class="glyphicon glyphicon-share"></span></a></li>
+                            <li><a href="tishare">TiShare <span class="glyphicon glyphicon-share"></span></a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="?app=3">New TiDoc <span class="glyphicon glyphicon-pencil"></span></a></li>
                             <li><a href="?app=4">New TiSheet <span class="glyphicon glyphicon-th-list"></span></a></li>
@@ -454,7 +454,7 @@
                 <li><a href="?app=2">TiChat <span class="glyphicon glyphicon-send"></span></a></li>
                 <li><a href="?app=6">Settings <span class="glyphicon glyphicon-cog"></span></a></li>
                 <li><a href="?app=7">Tiles <span class="glyphicon glyphicon-cloud"></span></a></li>
-                <li><a href="https://proudloyaltier.github.io/timedia/beta/tishare/">TiShare <span class="glyphicon glyphicon-share"></span></a></li>
+                <li><a href="tishare">TiShare <span class="glyphicon glyphicon-share"></span></a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="?app=3">TiDocs <span class="glyphicon glyphicon-pencil"></span></a></li>
                 <li><a href="?app=4">TiSheets <span class="glyphicon glyphicon-th-list"></span></a></li>
