--- a/beta/logout.html
+++ b/beta/logout.html
@@ -5,6 +5,7 @@
     var localFaces = localStorage.faces;
     var localTiSmileAccount = localStorage.tismileaccount;
     var localSecurity = localStorage.security;
+    var localTiSmileAccountPassword = localStorage.tismileaccountpassword;
   }
   
   if (localStorage.history !== undefined) {
@@ -21,6 +22,7 @@
     localStorage.faces = localFaces;
     localStorage.tismileaccount = localTiSmileAccount;
     localStorage.security = localSecurity;
+    localStorage.tismileaccountpassword = localTiSmileAccountPassword;
   }
   
   if (tiriHistory !== undefined) {
