--- a/beta/index.html
+++ b/beta/index.html
@@ -176,6 +176,7 @@
                     <button class="btn btn-primary formatting-button" onclick="document.execCommand('justifyLeft'); saveDoc();"><span class="glyphicon glyphicon-align-left"></span></button>
                     <button class="btn btn-primary formatting-button" onclick="document.execCommand('justifyCenter'); saveDoc();"><span class="glyphicon glyphicon-align-center"></span></button>
                     <button class="btn btn-primary formatting-button" onclick="document.execCommand('justifyRight'); saveDoc();"><span class="glyphicon glyphicon-align-right"></span></button>
+                    <button onclick="window.print()" id="legacyPrintButton" class="btn btn-primary no-print"><span class="glyphicon glyphicon-print"></button>
                     <button class="btn btn-primary formatting-button" onclick="showTiWorkColor()"><span class='glyphicon glyphicon-tint'></span</button>
             <!--<button class="btn btn-primary" onclick="insertImage();"><span class="glyphicon glyphicon-picture"></span></button>-->
                     <button id="fontSelect" class="btn btn-primary formatting-button">
@@ -204,7 +205,6 @@
             </div>
             <h5 style="display: none;" id="view"></h5>
             <br>
-            <button onclick="window.print()" id="legacyPrintButton" class="btn btn-primary no-print">Print Page</button>
             <button onclick="tiPrint()" id="printButton" class="btn btn-primary no-print" style="display: none"><i class="fa fa-mouse-pointer"></i> <span class="badge badge-pill">NEW</span> Print Now with TiPrint</button>
             <br>
             <button id="tidocs-edit" class="btn btn-primary" class="no-print" style="float: left; display: none; width: 50px; height: 50px; border-radius: 50%; position: fixed; z-index: 1; bottom: 10px; left: 10px;" onclick="editDoc()" class="btn btn-primary"><span class="glyphicon glyphicon-pencil"></span></button>
