--- a/beta/look.html
+++ b/beta/look.html
@@ -27,8 +27,8 @@
             </div>
         </div>
     </center>
-    <script src="js/speech.js"></script>
-    <script src="js/annyang.js"></script>
+    <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
     <script src="js/math.min.js"></script>
     <script src="js/tiri.js"></script>
 </body>
