--- a/beta/index.html
+++ b/beta/index.html
@@ -465,23 +465,23 @@
         </nav>
         <!--end of context menu -->
         <script src="https://www.gstatic.com/firebasejs/4.6.1/firebase.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/aes.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/alertifyjs-alertify.js/1.0.10/js/alertify.js"></script>
+        <script src="js/aes.js"></script>
+        <script src="js/alertify.js"></script>
         <script src="js/home.js"></script>
         <script src="js/cmenu.js"></script>
         <script src="js/main.js"></script>
         <script src="js/tismile.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
+        <script src="js/annyang.js"></script>
         <script src="js/math.min.js"></script>
         <script src="js/tiri.js"></script>
         <script src="js/jscolor.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.19.1/sweetalert2.all.min.js"></script>
+        <script src="js/swal.js"></script>
         <!--<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
         <script src="js/new.js"></script>
-        <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
+        <script src="js/speech.js"></script>
         <script src="js/bookmarks.js"></script>
         <script src="js/db.js"></script>
         <script src="js/docs.js"></script>
