--- a/beta/index.html
+++ b/beta/index.html
@@ -301,10 +301,18 @@
                 <button class="btn btn-slides formatting-button" onclick="document.execCommand('justifyLeft'); saveSlide();"><span class="glyphicon glyphicon-align-left"></span></button>
                 <button class="btn btn-slides formatting-button" onclick="document.execCommand('justifyCenter'); saveSlide();"><span class="glyphicon glyphicon-align-center"></span></button>
                 <button class="btn btn-slides formatting-button" onclick="document.execCommand('justifyRight'); saveSlide();"><span class="glyphicon glyphicon-align-right"></span></button>
-                <button class="btn btn-slides formatting-button" onclick="showTiWorkColor()"><span class='glyphicon glyphicon-tint'></span></button>
+                <button class="btn btn-slides formatting-button" onclick="showTiWorkColorSlides()"><span class='glyphicon glyphicon-tint'></span></button>
                 <button class="btn btn-slides formatting-button" onclick="addImage(prompt('Image URL'))"><span class="glyphicon glyphicon-picture"></span></button>
                 <button class="btn btn-slides formatting-button" onclick="addSlide()">+</button>
                 <button class="btn btn-slides formatting-button" onclick="removeSlide()">-</button>
+                <div style="display: none;" class='jumbotron container' id='fontColorDivSlides'>
+                  <p style='font-size: 30px;'>Change Text Color</p>
+                  <input style="width: 5%;" id="fontColor" class="jscolor form-control" value="000000">
+                  <br>
+                  <button onclick='setColorSlides();' class='btn btn-primary'>Set Color</button>
+                  <br>
+                  <br>
+                </div>
                 <br>
                 <br>
                 <button class="btn btn-slides formatting-button" onclick="addText()">Add Text</button>
