--- a/beta/index.html
+++ b/beta/index.html
@@ -307,7 +307,7 @@
                 <button class="btn btn-slides formatting-button" onclick="removeSlide()">-</button>
                 <div style="display: none;" class='jumbotron container' id='fontColorDivSlides'>
                   <p style='font-size: 30px;'>Change Text Color</p>
-                  <input style="width: 5%;" id="fontColor" class="jscolor form-control" value="000000">
+                  <input style="width: 5%;" id="fontColorSlides" class="jscolor form-control" value="000000">
                   <br>
                   <button onclick='setColorSlides();' class='btn btn-primary'>Set Color</button>
                   <br>
