--- a/beta/index.html
+++ b/beta/index.html
@@ -463,6 +463,7 @@
             </ul>
         </nav>
         <!--end of context menu -->
+        <script src="js/birthday.js"></script>
         <script src="https://www.gstatic.com/firebasejs/4.6.1/firebase.js"></script>
         <script src="js/aes.js"></script>
         <script src="js/alertify.js"></script>
