--- a/beta/index.html
+++ b/beta/index.html
@@ -135,7 +135,7 @@
             <div id="createBookmark">
                 <input id="tibookmarksTitle" class="form-control lg" value="Untitled Bookmark">
                 <br>
-                <h4 style="outline: none;" id="content" contenteditable="true"></h4>
+                <h4 style="outline: none;" id="bookmarksContent" contenteditable="true"></h4>
                 <br>
 
                 <button onclick="saveBookmark()" class="btn btn-primary">Save</button>
