--- a/beta/index.html
+++ b/beta/index.html
@@ -372,7 +372,7 @@
                 <br>
                 <br>
             </div>
-            <table style="width: 100%; outline: none;" contenteditable="true" id="tisheets-table" class='tisheetsContent'>
+            <table style="width: 100%; outline: none;" contenteditable="true" id="sheetsContent">
                 <tr>
                     <th>Value</th>
                     <th>Value</th>
