--- a/beta/index.html
+++ b/beta/index.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" href="other resources/cmenu.css" crossorigin="anonymous">
     <link rel="stylesheet" href="other resources/tiri.css" crossorigin="anonymous">
     <link rel="SHORTCUT ICON" href="other resources/favicon.ico">
-    <title>Home - TiMedia</title>
+    <title>TiMedia</title>
 </head>
 
 <body id="body" class="task" onload="hideTimer();">
@@ -71,8 +71,8 @@
                     <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                 </ul>
                 <center>
-                    <a class="navbar-brand" href="index.html?app=5">Tiri</a>
-                    <a class="navbar-brand" href="index.html">TiMedia <b>2</b></a>
+                    <!-- <a class="navbar-brand" href="index.html?app=5">Tiri</a> -->
+                    <a class="navbar-brand" href="index.html">TiMedia <b>3 Beta</b></a>
                 </center>
                 <ul id="logout" class="nav navbar-nav navbar-right" style="display: none;">
                     <li class="dropdown">
