--- a/beta/login.html
+++ b/beta/login.html
@@ -42,7 +42,7 @@
                 </button>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
-                <a class="navbar-brand" href="#">TiMedia <b>2</b></a>
+                <a class="navbar-brand" href="#">TiMedia <b>3 Beta</b></a>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a onclick="signupShow()"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                 </ul>
