--- a/beta/index.html
+++ b/beta/index.html
@@ -110,8 +110,7 @@
                         <div id="tiri-timer" class="message-return"></div>
                     </div>
                     <div id="send">
-                        <input id="tiri-box" class="form-control input-lg" type="text" placeholder="Type here or speak now." onchange="tt()" autofocus>
-                        <center>
+                        <input id="tiri-box" class="form-control input-lg" type="text" placeholder="Type here or speak now." onchange="tt()" autofocus><br>
                             <button id="clear-tiri-history" onclick="clearTiriHistory()" class="btn btn-primary">Clear Tiri Conversation</button>
                     </div>
                 </div>
