--- a/beta/index.html
+++ b/beta/index.html
@@ -106,9 +106,7 @@
                     <div id="bubbles">
                         <span class="message-return">Welcome</span>
                     </div>
-                    <div id="tiri-bubbles-timer" style="display: none;">
-                        <div id="tiri-timer" class="message-return"></div>
-                    </div>
+                    <div id="tiri-bubbles-timer" style="display: none;" class="message-return"></div>
                     <div id="send">
                         <input id="tiri-box" class="form-control input-lg" type="text" placeholder="Type here or speak now." onchange="tt()" autofocus><br>
                             <button id="clear-tiri-history" onclick="clearTiriHistory()" class="btn btn-primary">Clear Tiri Conversation</button>
