--- a/beta/index.html
+++ b/beta/index.html
@@ -85,9 +85,11 @@
                 <div id="iChat-messages" class="iChat-messages iChat"></div>
                 <script src="https://legend-of-iphoenix.github.io/iChat/js/iChat.min.js"></script>
                 <div id='pming-home' style='display: none;'>
-                <input id='message-input' class='form-control'>
-                <button onclick='sendMessage(document.getElementById("message-input").value)' class='btn btn-primary'>Send Message</button>
-                <div id='private-messages'></div>
+                    <input id='message-input' class='form-control'>
+                    <button onclick='sendMessage(document.getElementById("message-input").value);' class='btn btn-primary'>Send Message</button>
+                    <div id='private-messages'>
+                        <img src="https://media.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif">
+                    </div>
                 </div>
         </div>
         </center>
