--- a/beta/index.html
+++ b/beta/index.html
@@ -82,9 +82,7 @@
                 <input id="iChat-input" class="form-control">
                 <br>
                 <br>
-                <div id="iChat-messages" class="iChat-messages iChat">
-                    <img src="https://media.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif">
-                </div>
+                <div id="iChat-messages" class="iChat-messages iChat"></div>
                 <script src="https://legend-of-iphoenix.github.io/iChat/js/iChat.min.js"></script>
                 <div id='pming-home' style='display: none;'>
                     <input id='message-input' class='form-control'>
