--- a/beta/index.html
+++ b/beta/index.html
@@ -94,7 +94,7 @@
         <div style="display: none;" id="messages">
             <h3>TiChat</h3>
             <p> Username</p>
-            <input id="chat" class="form-control" autofocus>
+            <input id="chat" class="form-control" onchange="joinChat()" autofocus>
             <br>
             <button id="joinChatBtn" onclick="joinChat()" class="btn btn-primary">Chat With User</button>
         </div>
