--- a/404.html
+++ b/404.html
@@ -6,23 +6,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" href="beta/other resources/style2.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-<link rel="stylesheet" href="beta/other resources/style.css" crossorigin="anonymous">
-<link rel="stylesheet" href="beta/other resources/tiles.css" crossorigin="anonymous">
-<link rel="stylesheet" href="beta/other resources/cmenu.css" crossorigin="anonymous">
-<link rel="stylesheet" href="beta/other resources/tiri.css" crossorigin="anonymous">
+<link rel="stylesheet" href="/beta/other resources/style2.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+<link rel="stylesheet" href="/beta/other resources/style.css" crossorigin="anonymous">
+<link rel="stylesheet" href="/beta/other resources/tiles.css" crossorigin="anonymous">
+<link rel="stylesheet" href="/beta/other resources/cmenu.css" crossorigin="anonymous">
+<link rel="stylesheet" href="/beta/other resources/tiri.css" crossorigin="anonymous">
 <title>404 - TiMedia</title>
 </head>
 <body>
 <center>
-<h1>
-404 
-</h1>
-<h5>
- Page Not Found<br><br>
-Oh No! It looks like the page you are looking for was not found, it may have moved or been deleted.
+<h1>404 </h1>
+<h5>Page Not Found<br><br>
+Oh no! It looks like the page you are looking for was not found, it may have moved or been deleted.
 </h5>
-<a href="index.html">Back To TiMedia Homepage</a>
+<a href="/beta/index.html">Back To TiMedia Homepage</a>
 </center>
 </body>
 </html>
