--- a/beta/index.html
+++ b/beta/index.html
@@ -39,6 +39,7 @@
                         <a data-toggle="dropdown" href="#">Apps<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="index.html">Home <span class="glyphicon glyphicon-home"></span></a></li>
+                            <li><a href="index.html?app=5">Tiri <span class=""></span></a></li>
                             <li><a href="?app=2">TiChat <span class="glyphicon glyphicon-send"></span></a></li>
                             <li><a href="?app=6">Settings <span class="glyphicon glyphicon-cog"></span></a></li>
                             <li><a href="?app=7">Tiles <span class="glyphicon glyphicon-cloud"></span></a></li>
@@ -78,7 +79,6 @@
             <center>
                 <br>
                 <h3>TiMedia</h3>
-                <img onclick="window.location.href = 'index.html?app=5'" src="other resources/microphone.png" alt="Microphone - Tiri" height="100" width="100">
                 <input id="iChat-input" class="form-control">
                 <br>
                 <br>
