--- a/beta/index.html
+++ b/beta/index.html
@@ -255,7 +255,38 @@
             </div>
             <div id="tiles-searchbox" class="nobullet" style="display: none;">
             </div>
-            <nav id="tiles-add-button" class="fab-container">
+            <div style="float: right; width: 300px; height: 300px; position: absolute; left: 0; top: 0; border: 1px solid white;">
+            <span href="?app=3" id='docs-icon' class="ti-work-icon">
+            <center>
+            <span style='color: white; padding-top: 20%; font-size: 300%' class='glyphicon glyphicon-pencil'>
+            </span>
+            </center>
+            </span>
+            <span href="?app=4" id='sheets-icon' class="ti-work-icon">
+            <center>
+            <span style='color: white; padding-top: 20%; font-size: 300%' class='glyphicon glyphicon-th-list'>
+            </span>
+            </center>
+            </span>
+            <span href="?app=10" id='bookmarks-icon' class="ti-work-icon">
+            <center>
+            <span style='color: white; padding-top: 20%; font-size: 300%' class='glyphicon glyphicon-bookmark'>
+            </span>
+            </center>
+            </span>
+            <span href="?app=9" id='slides-icon' class="ti-work-icon">
+            <center>
+            <span style='color: white; padding-top: 20%; font-size: 300%' class='glyphicon glyphicon-blackboard'>
+            </span>
+            </center>
+            </span>
+            <span id="ti-work">
+            <p id='fab-text' style='font-size: 300%; display: table-cell; vertical-align: middle; opacity: 1; transition-duration: 0.25s;'>
+             +
+            </p>
+            </span>
+            </div>
+            <!--<nav id="tiles-add-button" class="fab-container">
                 <a href="?app=10" class="buttons">
                     <center><span style="font-size:30px;" class="glyphicon glyphicon-bookmark"></center></span></a>
 
@@ -271,7 +302,7 @@
                 <a class="buttons">
                     <center><span style="font-size:30px; padding: 10px;" class="glyphicon glyphicon-plus"></span></center>
                 </a>
-            </nav>
+            </nav>-->
         </div>
         <div id="tislides" style="display: none;">
             <h3>TiSlides <b>Beta</b></h3>
