--- a/beta/index.html
+++ b/beta/index.html
@@ -255,7 +255,7 @@
             </div>
             <div id="tiles-searchbox" class="nobullet" style="display: none;">
             </div>
-            <div style="float: right; width: 300px; height: 300px; position: absolute; left: 0; top: 0; border: 1px solid white;">
+            <div style="position: fixed; bottom: 0; right: 0; width: 300px; height: 300px;">
             <span href="?app=3" id='docs-icon' class="ti-work-icon">
             <center>
             <span style='color: white; padding-top: 20%; font-size: 300%' class='glyphicon glyphicon-pencil'>
