--- a/beta/index.html
+++ b/beta/index.html
@@ -256,25 +256,25 @@
             <div id="tiles-searchbox" class="nobullet" style="display: none;">
             </div>
             <div style="position: fixed; bottom: 0; right: 0; width: 300px; height: 300px;">
-            <span href="?app=3" id='docs-icon' class="ti-work-icon">
+            <span onclick="window.location.href = '?app=3'" id='docs-icon' class="ti-work-icon">
             <center>
             <span style='color: white; padding-top: 20%; font-size: 300%' class='glyphicon glyphicon-pencil'>
             </span>
             </center>
             </span>
-            <span href="?app=4" id='sheets-icon' class="ti-work-icon">
+            <span onclick="window.location.href = '?app=4'" id='sheets-icon' class="ti-work-icon">
             <center>
             <span style='color: white; padding-top: 20%; font-size: 300%' class='glyphicon glyphicon-th-list'>
             </span>
             </center>
             </span>
-            <span href="?app=10" id='bookmarks-icon' class="ti-work-icon">
+            <span href="window.location.href = '?app=10'" id='bookmarks-icon' class="ti-work-icon">
             <center>
             <span style='color: white; padding-top: 20%; font-size: 300%' class='glyphicon glyphicon-bookmark'>
             </span>
             </center>
             </span>
-            <span href="?app=9" id='slides-icon' class="ti-work-icon">
+            <span href="window.location.href = '?app=9'" id='slides-icon' class="ti-work-icon">
             <center>
             <span style='color: white; padding-top: 20%; font-size: 300%' class='glyphicon glyphicon-blackboard'>
             </span>
