--- a/beta/index.html
+++ b/beta/index.html
@@ -268,13 +268,13 @@
             </span>
             </center>
             </span>
-            <span href="window.location.href = '?app=10'" id='bookmarks-icon' class="ti-work-icon">
+            <span onclick="window.location.href = '?app=10'" id='bookmarks-icon' class="ti-work-icon">
             <center>
             <span style='color: white; padding-top: 20%; font-size: 300%' class='glyphicon glyphicon-bookmark'>
             </span>
             </center>
             </span>
-            <span href="window.location.href = '?app=9'" id='slides-icon' class="ti-work-icon">
+            <span onclick="window.location.href = '?app=9'" id='slides-icon' class="ti-work-icon">
             <center>
             <span style='color: white; padding-top: 20%; font-size: 300%' class='glyphicon glyphicon-blackboard'>
             </span>
