--- a/beta/index.html
+++ b/beta/index.html
@@ -281,7 +281,7 @@
             </center>
             </span>
             <span id="ti-work">
-            <p id='fab-text' style='font-size: 300%; display: table-cell; vertical-align: middle; opacity: 1; transition-duration: 0.25s;'>
+            <p id='fab-text' style='font-size: 300%; display: table-cell; vertical-align: middle; opacity: 1; transition: opacity 0.25s, font-size 0.75s; font-size: 60px;'>
              +
             </p>
             </span>
