--- a/beta/index.html
+++ b/beta/index.html
@@ -256,7 +256,7 @@
             <div id="tiles-searchbox" class="nobullet" style="display: none;">
             </div>
             <br><br><br><br><br><br>
-            <div style="position: relative; bottom: 0; right: 0; width: 220px; height: 200px;">
+            <div style="position: relative; bottom: 0; float: right; width: 220px; height: 200px;">
             <span onclick="window.location.href = '?app=3'" id='docs-icon' class="ti-work-icon">
             <center>
             <span style='color: white; padding-top: 20%; font-size: 200%' class='glyphicon glyphicon-pencil'>
