--- a/beta/index.html
+++ b/beta/index.html
@@ -256,8 +256,7 @@
             <div id="tiles-searchbox" class="nobullet" style="display: none;">
             </div>
             <br><br><br><br><br><br>
-            <div style="position: relative; bottom: 0; float: right; width: 220px; height: 200px; top: 100%;
-   transform: translateY(-100%);">
+            <div style="position: relative; bottom: 0; float: right; width: 220px; height: 200px: transform: translateY(-100%);">
             <span onclick="window.location.href = '?app=3'" id='docs-icon' class="ti-work-icon">
             <center>
             <span style='color: white; padding-top: 20%; font-size: 200%' class='glyphicon glyphicon-pencil'>
