--- a/beta/index.html
+++ b/beta/index.html
@@ -256,7 +256,7 @@
             <div id="tiles-searchbox" class="nobullet" style="display: none;">
             </div>
             <br><br><br><br><br><br>
-            <!--<div style="position: fixed; bottom: 0; right: 0; width: 220px; height: 200px;">-->
+            <div style="position: fixed; bottom: 0; right: 0; width: 220px; height: 200px;">
             <span onclick="window.location.href = '?app=3'" id='docs-icon' class="ti-work-icon">
             <center>
             <span style='color: white; padding-top: 20%; font-size: 200%' class='glyphicon glyphicon-pencil'>
@@ -286,7 +286,7 @@
              +
             </p>
             </span>
-            <!--</div>-->
+            </div>
             <!--<nav id="tiles-add-button" class="fab-container">
                 <a href="?app=10" class="buttons">
                     <center><span style="font-size:30px;" class="glyphicon glyphicon-bookmark"></center></span></a>
