--- a/beta/index.html
+++ b/beta/index.html
@@ -113,6 +113,15 @@
                     <div id="tiri-bubbles-timer" style="display: none;" class="message-return"></div>
                 </div>
         </div>
+        <div id='tiphotos'>
+        <div id='upload-photo'>
+        </div>
+        <div id='view-photo' style='display: none;'>
+        <img id="tiphotos-image" width="500px">
+        <video id="tiphotos-video" style="display: none;" controls></video>
+        <audio id="tiphotos-audio" style="display: none;" controls></audio><br>
+        </div>
+        </div>
         <div style="display: none;" id="tibookmarks">
             <h3>TiBookmarks</h3>
             <br>
