--- a/beta/index.html
+++ b/beta/index.html
@@ -114,9 +114,14 @@
                 </div>
         </div>
         <div id='tiphotos'>
-        <div id='upload-photo'>
+        <div id='tiphotos-upload'>
+            <h3>TiPhotos</h3>
+            <input class="form-control" id='photosTitle' value='Untitled Image'>
+            <br>
+            <br>
+            <button onclick='uploadPhoto()' class='btn btn-primary'></button>
         </div>
-        <div id='view-photo' style='display: none;'>
+        <div id='tiphotos-view' style='display: none;'>
         <img id="tiphotos-image" width="500px">
         <video id="tiphotos-video" style="display: none;" controls></video>
         <audio id="tiphotos-audio" style="display: none;" controls></audio><br>
