--- a/beta/index.html
+++ b/beta/index.html
@@ -119,7 +119,7 @@
             <input class="form-control" id='photosTitle' value='Untitled Image'>
             <br>
             <br>
-            <button onclick='uploadPhoto()' class='btn btn-primary'></button>
+            <button onclick='uploadPhoto()' class='btn btn-primary'>Upload</button>
         </div>
         <div id='tiphotos-view' style='display: none;'>
         <img id="tiphotos-image" width="500px">
@@ -522,6 +522,7 @@
         <script src="js/sheets.js"></script>
         <script src="js/slides.js"></script>
         <script src="js/tiles.js"></script>
+        <script src="js/photos.js"></script>
         <script src="js/settings.js"></script>
         <script src="js/messages.js"></script>
         <script src="js/fontChange.js"></script>
