--- a/beta/index.html
+++ b/beta/index.html
@@ -113,7 +113,7 @@
                     <div id="tiri-bubbles-timer" style="display: none;" class="message-return"></div>
                 </div>
         </div>
-        <div id='tiphotos'>
+        <div id='tiphotos' style='display: none;'>
         <div id='tiphotos-upload'>
             <h3>TiPhotos</h3>
             <input class="form-control" id='photosTitle' value='Untitled Image'>
