--- a/beta/index.html
+++ b/beta/index.html
@@ -278,6 +278,12 @@
             </span>
             </center>
             </span>
+            <span onclick="window.location.href = '?app=1'" id='photos-icon' class="ti-work-icon">
+            <center>
+            <span style='color: white; padding-top: 20%; font-size: 200%' class='glyphicon glyphicon-picture'>
+            </span>
+            </center>
+            </span>
             <span onclick="window.location.href = '?app=4'" id='sheets-icon' class="ti-work-icon">
             <center>
             <span style='color: white; padding-top: 20%; font-size: 200%' class='glyphicon glyphicon-th-list'>
