--- a/beta/index.html
+++ b/beta/index.html
@@ -45,7 +45,7 @@
                             <li><a href="?app=7">Tiles <span class="glyphicon glyphicon-cloud"></span></a></li>
                             <li><a href="tishare">TiShare <span class="glyphicon glyphicon-share"></span></a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="?app=1">Upload TiPhoto <span class="glyphicon glyphicon-picture"></span></a></li>
+                            <li><a onclick='uploadPhoto();'>Upload TiPhoto <span class="glyphicon glyphicon-picture"></span></a></li>
                             <li><a href="?app=3">New TiDoc <span class="glyphicon glyphicon-pencil"></span></a></li>
                             <li><a href="?app=4">New TiSheet <span class="glyphicon glyphicon-th-list"></span></a></li>
                             <li id='slides-new-menu'><a href="?app=9">New TiSlide <span class="glyphicon glyphicon-blackboard"></span></a></li>
@@ -278,7 +278,7 @@
             </span>
             </center>
             </span>
-            <span onclick="window.location.href = '?app=1'" id='photos-icon' class="ti-work-icon">
+            <span onclick="onclick='uploadPhoto();'" id='photos-icon' class="ti-work-icon">
             <center>
             <span style='color: white; padding-top: 20%; font-size: 200%' class='glyphicon glyphicon-picture'>
             </span>
@@ -492,7 +492,7 @@
                <li><a href="?app=7">Tiles <span class="glyphicon glyphicon-cloud"></span></a></li>
                <li><a href="tishare">TiShare <span class="glyphicon glyphicon-share"></span></a></li>
                <li role="separator" class="divider"></li>
-               <li><a href="?app=1">Upload TiPhoto <span class="glyphicon glyphicon-picture"></span></a></li>
+               <li><a onclick='uploadPhoto();'>Upload TiPhoto <span class="glyphicon glyphicon-picture"></span></a></li>
                <li><a href="?app=3">New TiDoc <span class="glyphicon glyphicon-pencil"></span></a></li>
                <li><a href="?app=4">New TiSheet <span class="glyphicon glyphicon-th-list"></span></a></li>
                <li id='slides-new-menu'><a href="?app=9">New TiSlide <span class="glyphicon glyphicon-blackboard"></span></a></li>
