--- a/beta/index.html
+++ b/beta/index.html
@@ -278,7 +278,7 @@
             </span>
             </center>
             </span>
-            <span onclick="onclick='uploadPhoto();'" id='photos-icon' class="ti-work-icon">
+            <span onclick='uploadPhoto();' id='photos-icon' class="ti-work-icon">
             <center>
             <span style='color: white; padding-top: 20%; font-size: 200%' class='glyphicon glyphicon-picture'>
             </span>
