--- a/beta/index.html
+++ b/beta/index.html
@@ -116,12 +116,12 @@
         </div>
         <div id='tiphotos' style='display: none;'>
         <h3> TiPhotos </h3>
-        <div id='tiphotos-upload'>
+        <!--<div id='tiphotos-upload'>
             <input class="form-control" id='photosTitle' value='Untitled Image'>
             <br>
             <br>
             <button onclick='uploadPhoto()' class='btn btn-primary'>Upload</button>
-        </div>
+        </div>-->
         <div id='tiphotos-view' style='display: none;'>
         <img id="tiphotos-image" width="500px">
         <video id="tiphotos-video" style="display: none;" controls></video>
