--- a/beta/index.html
+++ b/beta/index.html
@@ -272,13 +272,13 @@
             </div>
             <br><br><br><br><br><br>
             <!--<div style="position: fixed; bottom: 0; right: 0; width: 220px; height: 200px;">-->
-            <span onclick="window.location.href = '?app=3'" id='docs-icon' class="ti-work-icon">
+            <<span onclick="window.location.href = '?app=3'" id='docs-icon' class="ti-work-icon">
             <center>
             <span style='color: white; padding-top: 20%; font-size: 200%' class='glyphicon glyphicon-pencil'>
             </span>
             </center>
             </span>
-            <span onclick='uploadPhoto();' id='photos-icon' class="ti-work-icon">
+            <span onclick="onclick='uploadPhoto();'" id='upload-icon' class="ti-work-icon">
             <center>
             <span style='color: white; padding-top: 20%; font-size: 200%' class='glyphicon glyphicon-picture'>
             </span>
@@ -303,7 +303,7 @@
             </center>
             </span>
             <span id="ti-work">
-            <p id='fab-text' style='font-size: 300%; display: table-cell; vertical-align: middle; opacity: 1; transition: opacity 0.25s, font-size 0.75s; font-size: 60px;'>
+            <p id='fab-text' style='font-size: 40px; display: table-cell; vertical-align: middle;'>
              +
             </p>
             </span>
