--- a/beta/index.html
+++ b/beta/index.html
@@ -114,20 +114,20 @@
                     <div id="tiri-bubbles-timer" style="display: none;" class="message-return"></div>
                 </div>
         </div>
-        <div id='tiphotos' style='display: none;'>
+        <!--<div id='tiphotos' style='display: none;'>
         <h3> TiPhotos </h3>
-        <!--<div id='tiphotos-upload'>
+        <div id='tiphotos-upload'>
             <input class="form-control" id='photosTitle' value='Untitled Image'>
             <br>
             <br>
             <button onclick='uploadPhoto()' class='btn btn-primary'>Upload</button>
-        </div>-->
+        </div>
         <div id='tiphotos-view' style='display: none;'>
         <img id="tiphotos-image" width="500px">
         <video id="tiphotos-video" style="display: none;" controls></video>
         <audio id="tiphotos-audio" style="display: none;" controls></audio><br>
         </div>
-        </div>
+        </div>-->
         <div style="display: none;" id="tibookmarks">
             <h3>TiBookmarks</h3>
             <br>
