--- a/beta/index.html
+++ b/beta/index.html
@@ -262,7 +262,7 @@
             </div>
         </div>
         <div id="tiles" style="display: none;">
-            <h3>Tiles</h3>
+            <h3>Tiles <span class='glyphicon glyphicon-th-large'></span></h3>
             <br>
             <input placeholder="File Name" class="form-control" type="text" id="tiles-search" onkeyup="searchTiles(this.value)" width="80%" autofocus>
             <br>
