--- a/beta/index.html
+++ b/beta/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="other resources/photos.css" crossorigin="anonymous">
     <link rel="stylesheet" href="other resources/cmenu.css" crossorigin="anonymous">
     <link rel="stylesheet" href="other resources/tiri.css" crossorigin="anonymous">
-    <link rel="SHORTCUT ICON" href="other resources/favicon.ico">
+    <link rel="icon" href="other resources/favicon.ico">
     <title>TiMedia</title>
 </head>
 
