--- a/beta/index.html
+++ b/beta/index.html
@@ -264,8 +264,8 @@
         <div id="tiles" style="display: none;">
             <h3>Tiles <span class='glyphicon glyphicon-th-large'></span></h3>
             <br>
-            <input placeholder="File Name" class="form-control" type="text" id="tiles-search" onkeyup="searchTiles(this.value)" width="80%" autofocus>
-            <div id='select-filters'>
+            <input placeholder="File Name" class="form-control" type="text" id="tiles-search" onkeyup="searchTiles(this.value)" width="80%" autofocus><span id='filter-btn' style='display: inline-block;' onclick='showFilterSelect'>Filters</span>
+            <div id='select-filters' style='display: none;'>
             <label class="custom-control custom-checkbox">
             <input id='docs-filter' type="checkbox" class="custom-control-input">
             <span class="custom-control-indicator"></span>
