--- a/beta/index.html
+++ b/beta/index.html
@@ -264,7 +264,7 @@
         <div id="tiles" style="display: none;">
             <h3>Tiles <span class='glyphicon glyphicon-th-large'></span></h3>
             <br>
-            <input style='width: 70%;' placeholder="File Name" class="form-control" type="text" id="tiles-search" onkeyup="searchTiles(this.value)" width="80%" autofocus><span id='filter-btn' class='glyphicon glyphicon-menu-down' style='font-size: 150%; width: 30%; display: inline-block;' onclick='showFilterSelect()'></span>
+            <input style='width: 70%;' placeholder="File Name" class="form-control" type="text" id="tiles-search" onkeyup="searchTiles(this.value)" width="80%" autofocus><span id='filter-btn' class='glyphicon glyphicon-menu-down' style='font-size: 150%; width: 30%; display: inline;' onclick='showFilterSelect()'></span>
             <div id='select-filters' style='display: none;'>
             <label class="custom-control custom-checkbox">
             <input id='docs-filter' type="checkbox" class="custom-control-input">
