--- a/beta/index.html
+++ b/beta/index.html
@@ -266,6 +266,8 @@
             <br>
             <input style='width: 70%; display: inline-block;' placeholder="File Name" class="form-control" type="text" id="tiles-search" onkeyup="searchTiles(this.value)" width="80%" autofocus><span id='filter-btn' class='glyphicon glyphicon-menu-down' style='font-size: 215%; width: 30%; display: inline;' onclick='showFilterSelect()'></span>
             <div id='select-filters' style='display: none;'>
+            <h5> Filters </h5>
+            Filters allow you to view all tiles of the filetype(s) you select below. 
             <label class="custom-control custom-checkbox">
             <input id='docs-filter' type="checkbox" class="custom-control-input">
             <span class="custom-control-indicator"></span>
