--- a/beta/index.html
+++ b/beta/index.html
@@ -263,7 +263,7 @@
         </div>
         <div id="tiles" style="display: none;">
             <span class="glyphicon glyphicon-th-large" style="font-size: 300%;"></span>
-            <input style='width: 70%; display: inline-block;' placeholder="File Name" class="form-control" type="text" id="tiles-search" onkeyup="searchTiles(this.value)" width="80%" autofocus><span id='filter-btn' class='glyphicon glyphicon-menu-down' style='font-size: 215%; width: 30%; display: inline;' onclick='showFilterSelect()'></span>
+            <input style='width: 70%; display: inline-block;' placeholder="Search" class="form-control" type="text" id="tiles-search" onkeyup="searchTiles(this.value)" width="80%" autofocus><span id='filter-btn' class='glyphicon glyphicon-menu-down' style='font-size: 215%; width: 30%; display: inline;' onclick='showFilterSelect()'></span>
             <div id='select-filters' style='display: none;'>
             <h5> Filters </h5>
             Filters allow you to view all tiles of the filetype(s) you select below. 
