--- a/beta/index.html
+++ b/beta/index.html
@@ -262,7 +262,7 @@
             </div>
         </div>
         <div id="tiles" style="display: none;">
-            <span class="glyphicon glyphicon-th-large" style="font-size: 300%;"></span>
+            <span class="glyphicon glyphicon-th-large" style="font-size: 300%; float: left;"></span>
             <input style='width: 70%; display: inline-block;' placeholder="Search" class="form-control" type="text" id="tiles-search" onkeyup="searchTiles(this.value)" width="80%" autofocus><span id='filter-btn' class='glyphicon glyphicon-menu-down' style='font-size: 215%; width: 30%; display: inline;' onclick='showFilterSelect()'></span>
             <div id='select-filters' style='display: none;'>
             <h5> Filters </h5>
