--- a/beta/index.html
+++ b/beta/index.html
@@ -541,6 +541,7 @@
         </nav>
         <!--end of context menu -->
         <script src="js/birthday.js"></script>
+        <script src="js/ticopy.js"></script>
         <script src="https://www.gstatic.com/firebasejs/4.6.1/firebase.js"></script>
         <script src="js/aes.js"></script>
         <script src="js/alertify.js"></script>
