--- a/beta/index.html
+++ b/beta/index.html
@@ -540,6 +540,15 @@
             </ul>
         </nav>
         <!--end of context menu -->
+        <div id="settings">
+        <h1 id='settings-uname'>
+        </h1>
+        <div id="settings-back-arrow" onclick="backSettings()">
+        </div>
+        <br><br>
+        <div id="settings-sections">
+        </div>
+        </div>
         <script src="js/birthday.js"></script>
         <script src="https://www.gstatic.com/firebasejs/4.6.1/firebase.js"></script>
         <script src="js/aes.js"></script>
