--- a/beta/index.html
+++ b/beta/index.html
@@ -66,9 +66,9 @@
                 </center>
                 <ul id="logout" class="nav navbar-nav navbar-right" style="display: none;">
                     <li class="dropdown">
-                        <a data-toggle="dropdown" id="userdrop" onclick='openSettings()' href="#"><span class="caret"></span></a>
+                        <a data-toggle="dropdown" id="userdrop" href="#"><span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="index.html?app=6">Settings <span class="glyphicon glyphicon-cog"></span></a></li>
+                            <li><a onclick='openSettings()'>Settings <span class="glyphicon glyphicon-cog"></span></a></li>
                             <li><a href="logout.html">Logout <span class="glyphicon glyphicon-log-out"></span></a></li>
                         </ul>
                     </li>
